# interp-agent-bench

./: .gitignore  2025-10-22-19-27_SafetyTrainingAnalysis.ipynb  2025-10-23-14-35_BitcoinPriceElicitation.ipynb  404.html  AGENT.md  CONFIG.md  MODAL_SANDBOX_IMPLEMENTATION.md  PLOTTING_README.md  README.md  SCOPED_SANDBOX_USAGE.md  agent_providers.py  config_validator.py  demo.py  deploy_model.py  framework-one-pager.md  index.html  mkdocs.yml  notes.txt  objects.inv  plot_eval_results.py  plot_eval_results_test.py  prompt_builder.py  pyproject.toml  run_agent.py  run_and_eval.py  run_curriculum.sh  run_experiment.py  run_mass_agent.py  run_mass_eval.py  run_mass_eval_test.py  sitemap.xml  sky.yaml  task_format.yaml  test_docker_in_sandbox.py  test_hidden_prompt.py  test_openrouter.py  test_results.csv
.claude-plugin/: marketplace.json
.sandbox_states/: introspection-gemma-27b.json  introspection-qwen-30b.json  shutdown-resistance-investigation.json  test-obfuscated-peft.json
_old_eval_scripts/: consistency.md
configs/: README.md  china_elicit_qwen.yaml  example_gpt2_obfuscated.yaml  example_gpt2_test.yaml  example_local_gpt2.yaml  find_sentence_in_leaked_system_prompt.yaml  gemma_secret_extraction.yaml  harmful_mcq_knowledge.yaml  introspection_modal.yaml  introspection_modal_gemma.yaml  introspection_modal_qwen.yaml  qwen-steering-vector.yaml  qwen.yaml  qwen_medical_organism_local.yaml  qwen_organism_test_0.yaml  shutdown_resistance_modal.yaml  test_hidden_behavior.yaml  test_modal_minimal.yaml  test_obfuscated_model.yaml  test_standard_model.yaml
tests/: cli.py  (+17 more)
(+840 files in other folders)
