[project]
name = "interp-infra"
version = "0.3.0"
description = "Modular infrastructure for interpretability experiments with agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "cloudpickle>=3.0.0",
    "fastmcp>=2.10.6",
    "ipykernel>=6.30.0",
    "jupyter-client>=8.6.3",
    "jupyter-server>=2.16.0",
    "nbformat>=5.10.4",
    "modal>=0.49.0",
    "openai>=1.0.0",
    "openai-agents>=0.4.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "rich>=13.0.0",
    "skypilot-nightly[runpod]",
    "runpod>=1.5.1",
    "matplotlib>=3.10.7"
]

[project.optional-dependencies]
web = [
    "flask>=3.0.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.scripts]
scribe = "scribe.cli.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scribe", "interp_infra"]
